--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,10 @@ reqwest = "0.11.13"
 # The feature is not enabled by default to avoid pulling in
 # unnecessary dependencies for projects that do not need it.
 serde = { version = "1", features = ["derive"]}
+
 config = "0.13"
+uuid = { version = "0.8.1", features = ["v4"] }
+chrono = "0.4.15"
 
 [dependencies.sqlx]
 version = "0.5.7"
